force-app/main/default/objects/Service_Offering__c/Service_Offering__c.object-meta.xml
<CustomObject>
    <label>Service Offering</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Serial Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>