force-app/main/default/objects/Service_Offering__c/fields/Devotee__c.field-meta.xml
<CustomField>
    <fullName>Devotee__c</fullName>
    <label>Devotee</label>
    <referenceTo>Devotee__c</referenceTo>
    <relationshipLabel>Service Offerings</relationshipLabel>
    <relationshipName>Service_Offerings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>