force-app/main/default/objects/Service_Offering__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Temple</fullName>
                <default>true</default>
                <label>In Temple</label>
            </value>
            <value>
                <fullName>Outside Temple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>