force-app/main/default/objects/Service_Offering__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Service Offerings</relationshipLabel>
    <relationshipName>Service_Offerings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>