force-app/main/default/objects/Service_Offering__c/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <label>Service Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>